# NYC-taxi-analyics-dev

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  deploy-dev.yml
docker/: docker-compose.yml
docker/api/: Dockerfile
docker/pipeline/: Dockerfile
docker/producer/: Dockerfile
scripts/: deploy_dataflow.sh  load_sample_data.sh  setup_local.sh
src/: __init__.py
src/api/: __init__.py  config.py  main.py
src/api/routers/: __init__.py  health.py  stats.py  zones.py
src/api/schemas/: __init__.py  responses.py
src/api/services/: __init__.py  bigquery_service.py
src/dags/: __init__.py  backfill_processor.py  daily_mart_builder.py  data_quality_checks.py
src/dags/sql/: build_hourly_patterns.sql  build_zone_stats.sql
src/pipeline/: __init__.py  main.py  options.py
src/pipeline/io/: __init__.py  bq_writer.py  gcs_writer.py
src/pipeline/transforms/: __init__.py  dedupe.py  parse.py  validate.py
src/producer/: __init__.py  config.py  data_loader.py  main.py  publisher.py  rate_limiter.py  transformer.py
src/shared/: __init__.py  schemas.py  validators.py
terraform/environments/dev/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/modules/bigquery/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudrun/: main.tf  variables.tf
terraform/modules/dataflow/: main.tf  outputs.tf  variables.tf
terraform/modules/gcs/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf
terraform/modules/pubsub/: main.tf  outputs.tf  variables.tf
tests/: __init__.py
tests/e2e/: test_smoke.py
tests/integration/: test_pipeline_integration.py
tests/unit/test_api/: test_api.py
tests/unit/test_dags/: __init__.py  test_dag_integrity.py
tests/unit/test_pipeline/: test_transforms.py
tests/unit/test_producer/: __init__.py  test_rate_limiter.py  test_schemas.py  test_validators.py
